# ore-boost

./: Cargo.toml  README.md  cache-48J2TSpVpwmrwW84sMERcZigeAeFuUnC8bKHp7ET6RXt  cache-619u5FbmEh34hq4bUaM5yBRS4TuhUkQhPMTUL6rXscDC  cache-EExSorxnhxVKqnhNT4dNPNa8zvRBNBgju6n91F9cnKKy
api/: Cargo.toml  idl.json
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  loaders.rs  sdk.rs
api/src/state/: boost.rs  checkpoint.rs  config.rs  directory.rs  leaderboard.rs  mod.rs  reservation.rs  stake.rs  stake_lookup_table.rs
checkpoint/: Cargo.toml  README.md  cache-48J2TSpVpwmrwW84sMERcZigeAeFuUnC8bKHp7ET6RXt  cache-619u5FbmEh34hq4bUaM5yBRS4TuhUkQhPMTUL6rXscDC  cache-D4qtrWeNpJnZpmT9Fe2kx5oJf3E4ovorZgE6K6ux7Lqt  cache-EExSorxnhxVKqnhNT4dNPNa8zvRBNBgju6n91F9cnKKy  cache-GR3RHiK1MYu5zQgiBZBBKAp1EoABsb86DHhJENNbfE98
checkpoint/src/: checkpoint.rs  client.rs  error.rs  lookup_tables.rs  main.rs  notifier.rs
cli/: Cargo.toml
cli/src/: args.rs  boost.rs  create_stake_lookup_table.rs  deactivate.rs  extend_stake_lookup_table.rs  initialize.rs  main.rs  new.rs  open.rs  update_boost.rs
migrate/: Cargo.toml  README.md  output.txt  start-test-validator.sh
migrate/src/: client.rs  main.rs
program/: Cargo.toml
program/src/: activate.rs  claim.rs  close.rs  create_stake_lookup_table.rs  deactivate.rs  deposit.rs  extend_stake_lookup_table.rs  initialize.rs  lib.rs  migrate.rs  migrate_boost.rs  migrate_config.rs  migrate_hotfix.rs  new.rs  open.rs  payout.rs  rank.rs  rebase.rs  register.rs  reserve.rs  rotate.rs  update.rs  update_admin.rs  update_boost.rs  withdraw.rs
program/tests/: test_rewards.rs
