[workspace]
resolver = "2"
members = ["api", "cli", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
documentation = "https://ore.supply"
repository = "https://github.com/regolith-labs/ore"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[workspace.dependencies]
array-const-fn-init = "0.1.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.14.3"
clap = { version = "4.4.12", features = ["derive"] }
const-crypto = "0.1.0"
log = "0.4"
futures = "0.3"
num_enum = "0.7.2"
ore-boost-api = { path = "api", version = "0.1.0" }
## ore-utils = { features = ["spl"], version = "2.1.9" }
ore-utils = { features = ["spl"], path = "../ore/utils" }
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
  "no-entrypoint",
] }
static_assertions = "1.1.0"
thiserror = "1.0.57"
tokio = "1.35"
