[workspace]
resolver = "2"
members = ["api", "cli", "migrate", "program"]

[workspace.package]
version = "3.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
documentation = "https://docs.rs/ore-boost-api/latest/ore_boost_api/"
repository = "https://github.com/regolith-labs/ore-boost"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[workspace.dependencies]
array-const-fn-init = "0.1.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.14.3"
clap = { version = "4.4.12", features = ["derive"] }
const-crypto = "0.1.0"
log = "0.4"
futures = "0.3"
fixed = "=1.28"
num_enum = "0.7.2"
ore-api = { git = "https://github.com/regolith-labs/ore.git", branch = "hardhat/boost-v3" }
ore-boost-api = { path = "api" }
ore-boost-api-v1 = { git = "https://github.com/regolith-labs/ore-boost.git", rev = "06690d6", package = "ore-boost-api" }
solana-cli-config = "=2.1"
solana-client = "=2.1"
solana-program = "=2.1"
solana-rpc-client = "=2.1"
solana-sdk = "=2.1"
solana-transaction-status = "=2.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
static_assertions = "1.1.0"
steel = { version = "4.0", features = ["spl"] }
thiserror = "1.0.57"
tokio = "1.35"

[patch.crates-io]
# ore-api = { git = "https://github.com/regolith-labs/ore.git", branch = "hardhat/boost-v3" }
# ore-api = { path = "../ore/api" }

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true