[package]
name = "ore-boosts-cli"
description = "A command line interface for the ORE boosts program."
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "ore-boosts"
path = "src/main.rs"

[features]
default = []

[dependencies]
clap.workspace = true
futures.workspace = true
log.workspace = true
ore-utils.workspace = true
ore-boost-api.workspace = true
solana-cli-config.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-rpc-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
tokio.workspace = true
