[package]
name = "ore-boost-program"
description = "..."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_boost"

[features]
no-entrypoint = []
default = []

[dependencies]
ore-api.workspace = true
ore-boost-api.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true

[dev-dependencies]
base64 = "0.21"
bytemuck = "1.13"
rand = "0.8.5"
solana-program-test = "2.1"
solana-sdk = "2.1"
tokio = { version = "1.35", features = ["full"] }
